# glm-toolbridge

./: .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
docs/: PROTOCOL_DELTAS.md  demo.tape
examples/: openai_harness_demo.py
src/glm_toolbridge/: __init__.py  adapter.py  client.py  errors.py  normalize.py  protocol.py
tests/: conftest.py  test_adapter_roundtrip.py  test_protocol_deltas.py
tests/fixtures/: glm_tool_call_samples.json
