[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glm-toolbridge"
version = "0.1.0"
description = "A thin protocol adapter that reconciles GLM-5.2 tool calls with the OpenAI tool_calls schema coding-agent harnesses hardcode."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SuperMarioYL" }]
keywords = ["glm", "openai", "tool-calling", "function-calling", "coding-agent", "adapter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/SuperMarioYL/glm-toolbridge"
Repository = "https://github.com/SuperMarioYL/glm-toolbridge"
Issues = "https://github.com/SuperMarioYL/glm-toolbridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/glm_toolbridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
